         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2629084#pid2629084

WIP NOW  [SCRAPERS] Warn user if missing scraper API keys, required stuff, etc., before scraping.
         Also, improve the scraper error reporting and the disabling of the scraper object
         if the web site is overloaded.
         Make sure TGDB scraper works like a charm. [DONE]
         Update MobyGames scraper. [WIP NOW]
         Update ScreenSraper scraper.
         Update ArcadeDB scraper.

FEATURE  [SCRAPERS] Utility to check TheGamesDB monthly allowance.

FEATURE  [SCRAPERS] Utility to check MobyGames monthly allowance.

FEATURE  [SCRAPERS] Utility to check ScreenScraper monthly allowance.

WIP      [SCRAPERS] Option to rescrape all ROM assets in a similar fashion to
         "Scan ROMs local artwork". Create a menu entry in "Edit Launcher", "Manage ROMs",
         "Scrape ROMs artwork". "Scrape ROMs artwork" will use the same scraper settings in
         options as the ROM Scanner.
         I think the best location for the code is in the ScraperStrategy class.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/72

FEATURE  [CORE] New ROMs artwork type 3D Boxes, asked by Rufoo.

FEATURE  [CORE] New entry in root menu named "Global Reports"

FEATURE  [CORE] New entry in root menu named "Utilities"

WIP      [CORE] Move stuff from addon settings into the Utilities menu, including the
         database upgrading functions.

WIP      [CORE] Make sure AEL never crashes when rendering the root window, even if 
         categories.xml is corruped. Users must be able to access the Utilities menu always.
         In case of crash when rendering the root window, ask the user to update
         the databases (in the case the crash is due to a missing key in dictionary).

WIP      [CORE] Unified ROM artwork directory. This will require heavy changes in categories.xml.
         I still have to think how to properly implement this.